--- a/tasks.json
+++ b/tasks.json
@@ -1,10 +1,7 @@
 {
     "tasks": [
         {
-            "email": "zhaoolee@gmail.com"
-        },
-        {
-            "email": "zhaoolee@foxmail.com"
+            "email": "327209194@qq.com"
         }
     ]
 }
